syntax = "proto3";

package user;

option go_package = "./gen;gen";

// The user service definition.
service UserService {
  // Creates a new user
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
  // Authenticate a user
  rpc AuthenticateUser (AuthenticateUserRequest) returns (UserResponse) {}
  // Other user-related methods...
}

// Request message for creating a user
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

// Request message for authenticating a user
message AuthenticateUserRequest {
  string email = 1;
  string password = 2;
}

// Response message containing user details
message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  // Additional fields like token, etc.
}
